@@ -6,6 +6,9 @@ Revision history for WWW::Mechanize
     [DOCUMENTATION]
     - Document that click_button() will die when it cannot find a button (GH#136) (Julien Fiegehenn)
 
+    [TESTS]
+    - Add tests for select multiple (GH#132) (Michael G. Schwern) and (Julien Fiegehenn)
+
 2.01      2020-09-18 17:51:10Z
     - Add rel filter to find_link() (GH#305) (Julien Fiegehenn)
     - Fix typos (GH#304) (Ferenc Erki)
